# finance-manager

./: .gitignore  pyproject.toml  text_extraction.py
src/: main.py  pdf_reader.py  qwen.py  qwen_extraction.py  text_extraction.py
tests/: test_text_extraction.py
