[tool.poetry]
name = "pycologne"
version = "0.1.0"
description = ""
authors = ["Michael Polonskij <michael.polonskij@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"
ollama = "^0.3.3"
instructor = "^1.6.3"
loguru = "^0.7.2"
pdf2image = "^1.17.0"
pillow = "^11.0.0"
pyprojroot = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
